--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,6 +29,7 @@ jobs:
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
+        run: rm ./public/.gitignore
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./public
