--- a/package.json
+++ b/package.json
@@ -2,10 +2,17 @@
   "name": "bangnokia.github.io",
   "description": "My personal website",
   "dependencies": {
-    "tailwindcss": "^1.9.6"
+    "autoprefixer": "^10.0.2",
+    "postcss": "^8.1.8",
+    "tailwindcss": "^2.0.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "cross-env": "^7.0"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "cross-env NODE_ENV=development ./node_modules/.bin/tailwind build ./resources/scss/app.scss -o ./resources/css/app.css",
+    "build": "cross-env NODE_ENV=production ./node_modules/.bin/tailwind build ./resources/scss/app.scss -o ./resources/css/app.css",
+    "deploy": "npm run build && git add . && git commit -m 'build asset'"
   }
 }
