--- a/package.json
+++ b/package.json
@@ -13,6 +13,6 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "cross-env NODE_ENV=development ./node_modules/.bin/tailwind build ./resources/scss/app.scss -o ./resources/css/app.css",
     "build": "cross-env NODE_ENV=production ./node_modules/.bin/tailwind build ./resources/scss/app.scss -o ./resources/css/app.css",
-    "deploy": "npm run build && git add . && git commit -m 'build asset'"
+    "deploy": "npm run build && git add . && git commit -m 'build asset' && git push origin HEAD"
   }
 }
