--- a/package.json
+++ b/package.json
@@ -2,15 +2,17 @@
   "name": "bangnokia.github.io",
   "description": "My personal website",
   "dependencies": {
-    "autoprefixer": "^10.0.2",
-    "postcss": "^8.1.8",
     "tailwindcss": "^2.0.1"
   },
   "devDependencies": {
-    "cross-env": "^7.0"
+    "autoprefixer": "^10.0.2",
+    "cross-env": "^7.0",
+    "postcss": "^8.1.10",
+    "postcss-scss": "^3.0.4",
+    "postcss-cli": "^8.3.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "watch": "postcss ./resources/scss/app.scss -o ./resources/css/app.css --watch",
     "dev": "cross-env NODE_ENV=development ./node_modules/.bin/tailwind build ./resources/scss/app.scss -o ./resources/css/app.css",
     "build": "cross-env NODE_ENV=production ./node_modules/.bin/tailwind build ./resources/scss/app.scss -o ./resources/css/app.css",
     "deploy": "npm run build && git add . && git commit -m 'build asset' && git push origin HEAD"
