--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "autoprefixer": "^10.0.2",
     "cross-env": "^7.0",
     "postcss": "^8.1.10",
-    "postcss-scss": "^3.0.4",
-    "postcss-cli": "^8.3.0"
+    "postcss-cli": "^8.3.0",
+    "postcss-scss": "^3.0.4"
   },
   "scripts": {
     "watch": "postcss ./resources/scss/app.scss -o ./resources/css/app.css --watch",
