--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,8 +24,16 @@ jobs:
       - name: Install Pekyll
         run: composer global require bangnokia/pekyll
 
+      - name: Setup node
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+
       - name: Build
-        run: pekyll build
+        run: |
+          npm install
+          npm run build
+          pekyll build
 
       - run: rm ./public/.gitignore
 
