--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "devDependencies": {
     "autoprefixer": "^10.0.2",
     "cross-env": "^7.0",
+    "cssnano": "^4.1.10",
     "postcss": "^8.1.10",
     "postcss-cli": "^8.3.0",
     "postcss-scss": "^3.0.4"
@@ -14,7 +15,7 @@
   "scripts": {
     "watch": "postcss ./resources/scss/app.scss -o ./resources/css/app.css --watch",
     "dev": "cross-env NODE_ENV=development postcss ./resources/scss/app.scss -o ./resources/css/app.css",
-    "build": "cross-env NODE_ENV=production postcss ./resources/scss/app.scss -o ./resources/css/app.css",
+    "build": "cross-env NODE_ENV=production postcss ./resources/scss/app.scss -o ./resources/css/app.css --env production",
     "deploy": "npm run build && git add . && git commit -m 'build asset' && git push origin HEAD"
   }
 }
