--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,17 @@ jobs:
           extensions: curl, mbstring, zip, pcntl, pdo, iconv
           coverage: none
 
+      - name: Get Composer Cache Directory
+        id: composer-cache
+        run: |
+          echo "::set-output name=dir::$(composer config cache-files-dir)"
+      - uses: actions/cache@v2
+        with:
+          path: ${{ steps.composer-cache.outputs.dir }}
+          key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-composer-
+
       - name: Install Pekyll
         run: composer global require bangnokia/pekyll
 
@@ -28,10 +39,10 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: '14'
+        run: npm install
 
       - name: Build
         run: |
-          npm install
           npm run build
           pekyll build
 
