--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,7 +49,7 @@ jobs:
         run: |
           npm install
           npm run build
-          ./vendor/bin/pekyll build
+          pekyll build
 
       - run: rm ./public/.gitignore
 
