--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,9 +41,10 @@ jobs:
         with:
           node-version: '14'
 
+      - run: npm install
+
       - name: Build
         run: |
-          npm install
           npm run build
           pekyll build
 
