work in progress

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "daudau.cc",
-	"version": "0.0.1",
+	"license": "MIT",
 	"scripts": {
 		"dev": "svelte-kit dev",
 		"build": "svelte-kit build",
