--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
 		"@sveltejs/kit": "^1.0.0-next.321",
 		"@typescript-eslint/eslint-plugin": "^5.10.1",
 		"@typescript-eslint/parser": "^5.10.1",
+		"@unocss/preset-typography": "^0.39.3",
+		"add": "^2.0.6",
 		"eslint": "^7.32.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^3.2.1",
