--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
+.DS_Store
 node_modules
 /build
 /.svelte-kit
 /package
-/.idea
-.DS_Store
 .env
 .env.*
 !.env.example
+vite.config.js.timestamp-*
+vite.config.ts.timestamp-*
