--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
 		"typescript": "^4.9.3",
 		"vite": "^4.0.0",
 		"vitest": "^0.25.3",
-		"svelte-markdown": "^0.2.2"
+		"svelte-markdown": "^0.2.2",
+		"unocss": "^0.34.0",
+		"@unocss/preset-typography": "^0.39.3"
 	},
 	"type": "module"
 }
