--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@sveltejs/kit": "^1.0.0",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
+		"@unocss/preset-typography": "^0.39.3",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
@@ -26,13 +27,12 @@
 		"prettier-plugin-svelte": "^2.8.1",
 		"svelte": "^3.54.0",
 		"svelte-check": "^2.9.2",
+		"svelte-markdown": "^0.2.2",
 		"tslib": "^2.4.1",
 		"typescript": "^4.9.3",
-		"vite": "^4.0.0",
-		"vitest": "^0.25.3",
-		"svelte-markdown": "^0.2.2",
 		"unocss": "^0.34.0",
-		"@unocss/preset-typography": "^0.39.3"
+		"vite": "^4.0.0",
+		"vitest": "^0.25.3"
 	},
 	"type": "module"
 }
