--- a/package.json
+++ b/package.json
@@ -14,25 +14,30 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
-		"@playwright/test": "^1.28.1",
-		"@sveltejs/adapter-auto": "^1.0.0",
-		"@sveltejs/kit": "^1.15.2",
-		"@typescript-eslint/eslint-plugin": "^5.45.0",
-		"@typescript-eslint/parser": "^5.45.0",
+		"@sveltejs/adapter-auto": "^1.0.3",
+		"@sveltejs/kit": "^1.20.2",
+		"@typescript-eslint/eslint-plugin": "^5.59.11",
+		"@typescript-eslint/parser": "^5.59.11",
 		"@unocss/preset-typography": "^0.39.3",
-		"eslint": "^8.28.0",
-		"eslint-config-prettier": "^8.5.0",
+		"eslint": "^8.42.0",
+		"eslint-config-prettier": "^8.8.0",
 		"eslint-plugin-svelte3": "^4.0.0",
-		"prettier": "^2.8.0",
-		"prettier-plugin-svelte": "^2.8.1",
-		"svelte": "^3.54.0",
-		"svelte-check": "^2.9.2",
-		"svelte-markdown": "^0.2.2",
-		"tslib": "^2.4.1",
-		"typescript": "^4.9.3",
+		"prettier": "^2.8.8",
+		"prettier-plugin-svelte": "^2.10.1",
+		"svelte": "^3.59.1",
+		"svelte-check": "^2.10.3",
+		"svelte-markdown": "^0.2.3",
+		"tslib": "^2.5.3",
+		"typescript": "^4.9.5",
 		"unocss": "^0.53.1",
-		"vite": "^4.1.5",
-		"vitest": "^0.25.3"
+		"vite": "^4.3.9",
+		"vitest": "^0.25.8"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@esbuild-plugins/node-globals-polyfill": "^0.2.3",
+		"@types/marked": "^5.0.0",
+		"add": "^2.0.6",
+		"gray-matter": "^4.0.3"
+	}
 }
