--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
 		"@esbuild-plugins/node-globals-polyfill": "^0.2.3",
 		"@types/marked": "^5.0.0",
 		"add": "^2.0.6",
-		"gray-matter": "^4.0.3"
+		"gray-matter": "^4.0.3",
+		"highlight.js": "^11.8.0",
+		"marked-highlight": "^2.0.1"
 	}
 }
