--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"add": "^2.0.6",
 		"gray-matter": "^4.0.3",
 		"highlight.js": "^11.8.0",
+		"marked": "^5.1.0",
 		"marked-highlight": "^2.0.1"
 	}
 }
