--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@typescript-eslint/eslint-plugin": "^5.59.11",
 		"@typescript-eslint/parser": "^5.59.11",
 		"@unocss/preset-typography": "^0.39.3",
+		"@unocss/preset-uno": "^0.53.1",
 		"eslint": "^8.42.0",
 		"eslint-config-prettier": "^8.8.0",
 		"eslint-plugin-svelte3": "^4.0.0",
@@ -28,7 +29,6 @@
 		"svelte-check": "^2.10.3",
 		"tslib": "^2.5.3",
 		"typescript": "^4.9.5",
-		"unocss": "^0.53.1",
 		"vite": "^4.3.9",
 		"vitest": "^0.25.8"
 	},
@@ -39,6 +39,7 @@
 		"highlight.js": "^11.8.0",
 		"marked": "^5.1.0",
 		"marked-highlight": "^2.0.1",
+		"unocss": "^0.53.1",
 		"yarn": "^1.22.19"
 	}
 }
