--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 	"type": "module",
 	"dependencies": {
 		"@types/marked": "^5.0.0",
+		"@unocss/reset": "^0.53.1",
 		"front-matter": "^4.0.2",
 		"highlight.js": "^11.8.0",
 		"marked": "^5.1.0",
