--- a/package.json
+++ b/package.json
@@ -15,19 +15,19 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^1.0.3",
-		"@sveltejs/kit": "^1.20.2",
-		"@typescript-eslint/eslint-plugin": "^5.59.11",
-		"@typescript-eslint/parser": "^5.59.11",
+		"@sveltejs/kit": "^1.20.5",
+		"@typescript-eslint/eslint-plugin": "^5.60.1",
+		"@typescript-eslint/parser": "^5.60.1",
 		"@unocss/preset-typography": "^0.39.3",
-		"@unocss/preset-uno": "^0.53.1",
-		"eslint": "^8.42.0",
+		"@unocss/preset-uno": "^0.53.4",
+		"eslint": "^8.43.0",
 		"eslint-config-prettier": "^8.8.0",
 		"eslint-plugin-svelte3": "^4.0.0",
 		"prettier": "^2.8.8",
 		"prettier-plugin-svelte": "^2.10.1",
-		"svelte": "^3.59.1",
+		"svelte": "^3.59.2",
 		"svelte-check": "^2.10.3",
-		"tslib": "^2.5.3",
+		"tslib": "^2.6.0",
 		"typescript": "^4.9.5",
 		"vite": "^4.3.9",
 		"vitest": "^0.25.8"
@@ -35,12 +35,14 @@
 	"type": "module",
 	"dependencies": {
 		"@types/marked": "^5.0.0",
-		"@unocss/reset": "^0.53.1",
+		"@unocss/reset": "^0.53.4",
 		"front-matter": "^4.0.2",
-		"highlight.js": "^11.8.0",
-		"marked": "^5.1.0",
-		"marked-highlight": "^2.0.1",
-		"unocss": "^0.53.1",
+		"markdown-it": "^13.0.1",
+		"markdown-it-anchor": "^8.6.7",
+		"markdown-it-shiki": "^0.9.0",
+		"markdown-it-shiki-twoslash": "^2.1.3",
+		"shiki": "^0.14.3",
+		"unocss": "^0.53.4",
 		"yarn": "^1.22.19"
 	}
 }
