--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@typescript-eslint/parser": "^5.60.1",
 		"@unocss/preset-typography": "^0.39.3",
 		"@unocss/preset-uno": "^0.53.4",
+		"@unocss/preset-web-fonts": "^0.53.4",
 		"eslint": "^8.43.0",
 		"eslint-config-prettier": "^8.8.0",
 		"eslint-plugin-svelte3": "^4.0.0",
