--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,8 +25,7 @@ jobs:
         run: composer global require bangnokia/lina
 
       - name: Build
-        run: lina build
-
+        run: composer global exec lina build
       - run: rm ./public/.gitignore
 
       - name: Deploy
