--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
           coverage: none
 
       - name: Install Line
-        run: composer global require bangnokia/lina
+        run: composer global require bangnokia/lina:dev-main
 
       - name: Build
         run: composer global exec lina build
