--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,8 +27,10 @@ jobs:
           composer global require bangnokia/lina:0.3.1
 
       - name: Build
-        run: php ~/.composer/vendor/bin/lina build
-      - run: rm ./public/.gitignore
+        run: |
+          ls -la
+          php ~/.composer/vendor/bin/lina build
+          rm ./public/.gitignore
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
