--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,6 +28,7 @@ jobs:
 
       - name: Build
         run: |
+          ls -la ./public
           php vendor/bin/lina build --verbose
           rm ./public/.gitignore
 
