--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Install Lina
         run: |
           composer global config minimum-stability dev
-          composer require bangnokia/lina:dev-main
+          composer global require bangnokia/lina:dev-main
 
       - name: Build
         run: |
