--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: 8.3
-          extensions: curl, mbstring, zip, pcntl, pdo, iconv
+          extensions: curl, mbstring, zip, pcntl, iconv
           coverage: none
 
       - name: Install Lina
